--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,9 @@ li a{
 .active{
     background-color: green;
 }
+li a:hover:not(.active) {
+    background-color: #04AA6D;
+  }
 h3{
     font-size: 30px;
     color: #0b4968;
@@ -49,14 +52,17 @@ h3{
     margin-left: 29px;
     font-family: sans-serif;
 }
+.main{
+    overflow: hidden;
+}
 .content{
     float: left;
-    width: 58%;
+    width: 70%;
     background-color: white;
 }
 p{
     margin-left: 29px;
-    margin-right: 20px;
+    margin-right: 15px;
     
 }
 h2{
@@ -65,13 +71,24 @@ h2{
     font-family: sans-serif;
     padding: 25px;
     padding-bottom: 0px;
+    padding-left: 0px;
 
 }
 .sidebar{
     background-color: lightgray;
     float: right;
-    width: 38%;
+    width: 25%;
+    margin-right: 20px;
+
 }
 #h{
-    margin: top 0px; ;
+    margin-left: 0px;
+    padding-left: 0px;
+}
+.footer{
+    background-color: rgb(175, 172, 172);
+    text-align: right;
+    padding-right: 10px;
+    padding-top: 15px;
+    padding-bottom: 10px;
 }
